--- a/.github/workflows/generate_pdfs.yml
+++ b/.github/workflows/generate_pdfs.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: pip install openai fpdf stefanzweifel/git-auto-commit-action
+        run: pip install openai fpdf
       - name: Generate PDFs
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
