--- a/.github/workflows/generate_pdfs.yml
+++ b/.github/workflows/generate_pdfs.yml
@@ -34,11 +34,10 @@ jobs:
               pdf = FPDF()
               pdf.add_page()
               pdf.set_font("Arial", size=12)
-              resp = openai.chat.completions.create(
-                  model="gpt-4-turbo",
-                  messages=[{"role":"user","content":
-                      f"Donne-moi 50 prompts ChatGPT pour {niche}, sous forme numérotée."}]
-              )
+resp = openai.chat.completions.create(
+    model="gpt-3.5-turbo",
+    messages=[{"role":"user","content": ... }]
+)
               prompts = resp.choices[0].message.content.split("\\n")
               for line in prompts:
                   pdf.multi_cell(0, 10, line)
